:art: remove bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Olusegun Emmanuel</span>
-                <span class="d-none d-lg-block"> <img src="/images/segun.jpg" class="img-fluid img-profile  rounded-circle mx-auto mb-2" alt=""></span>
+                <span class="d-none d-lg-block"> <img src="images/segun.jpg" class="img-fluid img-profile  rounded-circle mx-auto mb-2" alt=""></span>
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
