--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -58,28 +60,11 @@
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Experience</h2>
-             
-                <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Backend Engineer</h3>
-                        <div class="subheading mb-3">Morina &amp; Co</div>
-                        <p>
-                         - Design and implement API for banking system <br>
-                         - Build fully automated CI/CD pipelines for containerized applications using Docker and AWS ECR. <br>
-                         - Dockerize the application, and separate environments <br>
-                         - Write tests (TDD) for the application (functional tests) which include Unit, API, and Acceptance testing using different     tools to achieve codebase coverage <br>
-                         - Deployed a centralized monitoring environment(Grafana, Prometheus) which gathers system metrics <br>
-                         - Integrate application with cloud services such as AWS, and Firebase <br>
-                         - Design, document and visualize the workflow of the new features <br>
-                        </p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">March. 2020 - Dec. 2020</span></div>
-                </div> -->
 
                  <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">FULL-STACK DEVELOPER</h3>
-                        <div class="subheading mb-3">Freelancer [Open Source] </div>
+                        <div class="subheading mb-3">Freelancer [ Open Source ] </div>
                         <p class="font">- Develop web application for Nursing Institution, improving site speed by 30% and User engagement by 20% <br>
                         - Integrate web application with third party services <br>
                         - Contribute & participate in Eddie’s Practice open-source project/community <br>
@@ -95,14 +80,15 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Backend Developer</h3>
-                        <div class="subheading mb-3"> @ Epistimis [Volunteer] </div>
-                        <!-- <p class="font">- Develop web application for Nursing Institution, improving site speed by 30% and User engagement by 20% <br> -->
-                        <!-- - Integrate web application with third party services <br>
+                        <div class="subheading"> @ Epistimis [ Volunteer ] </div>
+                        <div class="subheading mb-3"> America ( Remote )  </div>
+                        <p class="font">- Develop web application for Nursing Institution, improving site speed by 30% and User engagement by 20% <br>
+                        - Integrate web application with third party services <br>
                         - Contribute & participate in Eddie’s Practice open-source project/community <br>
-                        - Deploy and monitor services to production environment <br> -->
+                        - Deploy and monitor services to production environment <br>
                         </p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Sept. 2023 - January, 2024 </span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">Sept. 2023 - Jan, 2024 </span></div>
                 </div>
 
 
@@ -111,7 +97,8 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">FULL-STACK DEVELOPER</h3>
-                        <div class="subheading mb-3">@ Alx Africa</div>
+                        <div class="subheading">@ Alx Africa</div>
+                        <div class="subheading mb-3"> Kenya ( Remote )  </div>
                         <p class="font">- Design and implement API‑s for real estate platform <br>
                         - Integrate the applications with third party services <br>
                         - Deploy and monitor the services to production environment <br>
@@ -124,37 +111,19 @@
                     <div class="flex-shrink-0"><span class="text-primary">Aug. 2022 - Sept. 2023 </span></div>
                 </div>
 
-
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Backend Engineer</h3>
-                        <div class="subheading mb-3">@ Dev Town</div>
-                       <p class="font">
-                        - Design, document and visualize the workflow of the current and new features.    <br>
-                        </p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Jan. 2022 - Fab. 2022</span></div>
-                </div>
             </div>
         </section>
 
 
 
-        <section class="resume-section" id="education">
+        <section class="resume-section educate" id="education">
             <div class="resume-section-content">
                 <h2 class="mb-5">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Computer Science and Engineering</h3>
+                        <h3 class="mb-0"> Ecole De Techniciens Superieurs Du Benin (ECOTES) </h3>
                         <div class="subheading mb-3">Bachelor of Science</div>
-                        <div class="font">Computer Science - Software Engineering Specialization</div>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">2017 - 2021</span></div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Hajdar Dushi Gymansium</h3>
-                        <div class="subheading mb-3">Nature sciences</div>
+                        <div class="font">Computer Science</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2014 - 2017</span></div>
                 </div>
@@ -209,15 +178,39 @@
                         <div>
                             <img src="images/AirBnB-clone.png" alt="">
                         </div>
+
+                        <div>
+
+                        </div>
+
+                        <div class="projectViews">
+                            <a href=""> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href=""> Visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
                     </div>
                     <div class="box"> 
                         <div>
                         <img src="images/Home-Sunnah-Health-College.png" alt="">
                     </div>
+
+
+
+                    <div class="projectViews">
+                        <a href=""> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href=""> Visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
                 </div>
                     <div class="box"> 
                         <div>
                         <img src="images/foya.png" alt="">
+                    </div>
+
+
+
+
+                    <div class="projectViews">
+                        <a href=""> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href=""> visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 </div>
