:pencil2: update experience

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
                         <h3 class="mb-0">Backend Developer</h3>
                         <div class="subheading"> @ Epistimis [ Volunteer ] </div>
                         <div class="subheading mb-3"> America ( Remote )  </div>
-                        <p class="font">- Develop web application for Nursing Institution, improving site speed by 30% and User engagement by 20% <br>
-                        - Integrate web application with third party services <br>
-                        - Contribute & participate in Eddie’s Practice open-source project/community <br>
-                        - Deploy and monitor services to production environment <br>
+                        <p class="font">- Collaborate with developers to write clear, concise and detailed documentation. <br>
+                            - Regularly review and update existing documentation to reflect the latest changes and improvements. <br>
+                            - Organize and host regular standup’s for developers to discuss new features, share knowledge, and brainstorm ideas. <br>
+                            - Maintain a clean and organized codebase by refactoring and optimizing code regularly. <br>
+                            - Assist in the planning and execution of major software releases and updates. <br>
                         </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Sept. 2023 - Jan, 2024 </span></div>
@@ -179,13 +180,13 @@
                             <img src="images/AirBnB-clone.png" alt="">
                         </div>
 
-                        <div>
-
+                        <div class="param">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sint eius atque vero quasie tempora veritatis dolore id laborum, quis tenetur itaque dolor ad perferendis.</p>
                         </div>
 
                         <div class="projectViews">
-                            <a href=""> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                            <a href=""> Visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="" class="Linkbutton"> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="" class="Linkbutton"> Visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="box"> 
@@ -193,11 +194,13 @@
                         <img src="images/Home-Sunnah-Health-College.png" alt="">
                     </div>
 
-
+                    <div class="param">
+                        <p>Lorem, ipsum dolor sit amet consect tempore enim. Facere similique tempora veritatis dolore id laborum, quis tenetur itaque dolor ad perferendis.</p>
+                    </div>
 
                     <div class="projectViews">
-                        <a href=""> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        <a href=""> Visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href=""  class="Linkbutton"> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href=""  class="Linkbutton"> Visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                     <div class="box"> 
@@ -205,12 +208,14 @@
                         <img src="images/foya.png" alt="">
                     </div>
 
-
+                    <div class="param">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sint eius atque vero quasi itaque, tempore enim. Facere similique tempora veritatis dolore id laborum, quis tenetur itaque dolor ad perferendis.</p>
+                    </div>
 
 
                     <div class="projectViews">
-                        <a href=""> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        <a href=""> visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href=""  class="Linkbutton"> Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href=""  class="Linkbutton"> visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 </div>
